--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(picket)
 set(CMAKE_CXX_STANDARD 14)
 
 # GTKMM
-find_package(PkgConfig)
-pkg_check_modules(GTKMM gtkmm-3.0)
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTKMM gtkmm-3.0 REQUIRED)
 link_directories(${GTKMM_LIBRARY_DIRS})
 include_directories(${GTKMM_INCLUDE_DIRS})
 
